src/objects/Speaker__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sessions (Speaker)</relationshipLabel>
        <relationshipName>Speakers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Send_Thank_You_Beer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Thank You Beer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Speakers</relationshipLabel>
        <relationshipName>Speakers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Speaker</label>
    <nameField>
        <displayFormat>SPK-{0}</displayFormat>
        <label>Speaker Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>